# CompilerPrincipal-Lab

./: README.md
Lab-1/: README.md
Lab-1/SEULex/: .gitignore  CMakeLists.txt
Lab-1/SEULex/docs/: FILE_TEMPLATE.cpp  README.md  config.properties  example.xml
Lab-1/SEULex/include/: DFA.h  DFAO.h  DFAState.h  NFA.h  NFAState.h  ascii_charset.h  charset.h  code_data.h  config.h  generator.h  re_utils.h  rule.h  source_file.h  string_iterator.h  string_utils.h  tinyxml2.h  utf8_string_iterator.h
Lab-1/SEULex/src/: CMakeLists.txt  Test  Test.cpp  main.cpp
Lab-1/SEULex/src/config/: config.cpp
Lab-1/SEULex/src/core/: DFA.cpp  DFAO.cpp  DFAState.cpp  NFA.cpp  NFAState.cpp  ascii_charset.cpp  generator.cpp  rule.cpp  source_file.cpp  utf8_string_iterator.cpp
Lab-1/SEULex/src/test/: test.cpp
Lab-1/SEULex/src/utils/: re_utils.cpp  string_utils.cpp
Lab-1/SEULex/test/: CMakeLists.txt  test.cpp
Lab-1/SEULex/tinyxml2/: tinyxml2.h
Lab-1/SoftcodeLexer/: .gitignore  pom.xml
Lab-1/SoftcodeLexer/docs/: README.md  example-dfa.csv  test.txt
Lab-1/example/: SEULex  config.properties  lex  lex.cpp  test.json  test.xml
Lab-1/report/: goal.tex  implement.tex  main.tex  result.tex  summary.tex
Lab-2/: README.md
Lab-2/SimpleJavaLexerAndParser/docs/: README.md
Lab-2/SimpleJavaLexerAndParser/src/test/resources/: json-actions.csv  test.txt  (+6 more)
Lab-2/SimpleJavaLexerAndParserProduct/example/: example.json  lexer-config.properties
Lab-2/SoftCodeParserProduct/example/: example.json  json-goto.csv  parser-config.properties  simple-json-dfa.csv
Lab-2/SoftcodeParser/: .gitignore  pom.xml
Lab-2/SoftcodeParser/docs/: README.md  lex-config.properties
Lab-2/report/: goal.tex  implement.tex  main.tex  result.tex  summary.tex
(+45 files in other folders)
